fixed horizontal scrolling issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,15 @@ body {
   align-items: center;
   display: flex;
   flex-flow: column wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
+  max-width: 100vw;
+  min-height: 100vh;
 }
 
 header {
   background-color: rgba(148, 94, 178, 1);
   text-align: center;
-  width: 100vw;
+  width: 100%;
 }
 
 #brand {
@@ -44,7 +46,7 @@ header {
 }
 
 .container {
-  padding: 0 .8em;
+  max-width: 100vw;
 }
 
 .section-header {
@@ -52,16 +54,20 @@ header {
   display: flex;
   flex-direction: column;
   font-size: 1.75em;
-  height: calc(1.75em * 1.75);
+  height: 10vh;
   justify-content: center;
   margin: 0 0 .8em 0;
   text-align: center;
-  width: 100vw;
+  width: 100%;
 }
 
 #bio-pic {
   max-width: 100%;
   padding: 0 10%;
+}
+
+#main-text {
+  padding: 0 1em;
 }
 
 #main-text > a {
@@ -115,12 +121,22 @@ footer {
     align-items: flex-start;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   #bio-pic {
     height: auto;
     max-width: 33.33%;
     padding: 0;
+  }
+
+  #main-text {
+    flex: 66.67%;
+    margin: 0;
+    padding: 0 0 0 1em;
+  }
+
+  footer {
+    align-self: flex-end;
   }
 }
